🐛 fix: fix css spacing between these cards which makes everything look better

--- a/src/assets/css/components/custom-card.css
+++ b/src/assets/css/components/custom-card.css
@@ -72,6 +72,10 @@ custom-card :is(a, p, h2, h3) {
 
 /* -------------------- variants --------------------  */
 
+custom-card[project] {
+  margin-bottom: 3.5rem !important;
+}
+
 /* no padding */
 custom-card[no-padding] {
   background-color: transparent;
